// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Photo Gallery Page A11y I can see the skip to content link 1`] = `"Ir al contenido"`;

exports[`Canonical Photo Gallery Page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=62&amp;p=sport::mundo.sport.photo_gallery.36935058.page&amp;x1=[urn:bbc:cps:08e22e90-7361-cd47-b586-7cb53fc5a012]&amp;x2=[responsive]&amp;x3=[news-mundo]&amp;x4=[es]&amp;x7=[article-photo-gallery]&amp;x8=[simorgh-nojs]&amp;x9=[Río+2016,+el+antes+y+el+ahora:+cómo+ha+cambiado+la+ropa+deportiva+en+más+de+un+siglo+de+juegos+olímpicos+-+BBC+News+Mundo]&amp;x11=[2016-08-07T09:21:02.000Z]&amp;x12=[2016-08-07T09:21:14.000Z]&amp;x14=[0d205538-c52e-41c7-a4a1-50efd6c1da59~15f1bcf6-b6ab-48e8-b708-efed41e43d31~1d2e1514-faa8-425d-8481-a1cc4da6cc24~4063f80f-cccc-44c8-9449-5ca44e4c8592]\\"/>"`;

exports[`Canonical Photo Gallery Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/mundo"`;

exports[`Canonical Photo Gallery Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. La BBC no se hace responsable del contenido de sitios externos. Lee sobre nuestra postura acerca de enlaces externos."`;

exports[`Canonical Photo Gallery Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Mundo",
  "url": "/mundo",
}
`;

exports[`Canonical Photo Gallery Page Footer Link should match text and url 2`] = `
Object {
  "text": "Por qué puedes confiar en la BBC",
  "url": "https://www.bbc.com/mundo/institucional-51359666",
}
`;

exports[`Canonical Photo Gallery Page Footer Link should match text and url 3`] = `
Object {
  "text": "Términos de uso",
  "url": "https://www.bbc.com/mundo/institucional-36400005",
}
`;

exports[`Canonical Photo Gallery Page Footer Link should match text and url 4`] = `
Object {
  "text": "Sobre la BBC",
  "url": "https://www.bbc.com/mundo/institucional-36400007",
}
`;

exports[`Canonical Photo Gallery Page Footer Link should match text and url 5`] = `
Object {
  "text": "Política de privacidad",
  "url": "https://www.bbc.com/mundo/institucional-36400009",
}
`;

exports[`Canonical Photo Gallery Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Photo Gallery Page Footer Link should match text and url 7`] = `
Object {
  "text": "Contacta a la BBC",
  "url": "https://www.bbc.com/mundo/institucional-36400011",
}
`;

exports[`Canonical Photo Gallery Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical Photo Gallery Page Footer Link should match text and url 9`] = `
Object {
  "text": "Lee sobre nuestra postura acerca de enlaces externos.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Canonical Photo Gallery Page Header I can see the branding 1`] = `"BBC News, Mundo"`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Noticias",
  "url": "/mundo",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "América Latina",
  "url": "/mundo/america_latina",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Internacional",
  "url": "/mundo/internacional",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Economía",
  "url": "/mundo/topics/ca170ae3-99c1-48db-9b67-2866f85e7342",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Tecnología",
  "url": "/mundo/topics/31684f19-84d6-41f6-b033-7ae08098572a",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Ciencia",
  "url": "/mundo/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "Salud",
  "url": "/mundo/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "Cultura",
  "url": "/mundo/topics/6a73afa3-ea6b-45c1-80bb-49060b99f864",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 9`] = `
Object {
  "text": "Deportes",
  "url": "/mundo/topics/4063f80f-cccc-44c8-9449-5ca44e4c8592",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 10`] = `
Object {
  "text": "Video",
  "url": "/mundo/media/video",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 11`] = `
Object {
  "text": "Hay Festival",
  "url": "/mundo/noticias-36795069",
}
`;

exports[`Canonical Photo Gallery Page Header Navigation link should match text and url 12`] = `
Object {
  "text": "Centroamérica Cuenta",
  "url": "/mundo/noticias-43826245",
}
`;

exports[`Canonical Photo Gallery Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/mundo/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Photo Gallery Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Photo Gallery Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Photo Gallery Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Photo Gallery Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Photo Gallery Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Photo Gallery Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Photo Gallery Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Photo Gallery Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Photo Gallery Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Photo Gallery Page SEO Canonical link 1`] = `"http://localhost:7080/mundo/deportes-36935058"`;

exports[`Canonical Photo Gallery Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Photo Gallery Page SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical Photo Gallery Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Photo Gallery Page SEO Heading level 1 1`] = `"Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos"`;

exports[`Canonical Photo Gallery Page SEO Lang attribute 1`] = `"es"`;

exports[`Canonical Photo Gallery Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "Article",
      "about": Array [
        Object {
          "@type": "Thing",
          "name": "Olympics",
          "sameAs": Array [
            "http://dbpedia.org/resource/Summer_Olympic_Games",
          ],
        },
        Object {
          "@type": "Thing",
          "name": "Brazil",
        },
        Object {
          "@type": "Thing",
          "name": "Rio 2016",
        },
        Object {
          "@type": "Thing",
          "name": "Sport",
          "sameAs": Array [
            "http://dbpedia.org/resource/Sport",
          ],
        },
      ],
      "author": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
          "width": 1024,
        },
        "name": "BBC News Mundo",
        "noBylinesPolicy": "https://www.bbc.com/mundo/institucional-51359666#authorexpertise",
      },
      "dateModified": "2016-08-07T09:21:14.000Z",
      "datePublished": "2016-08-07T09:21:02.000Z",
      "description": "La estética de la ropa deportiva ha ido evolucionando en cada edición olímpica, pero no solo se trata de lucir bien, pues en varias competencias contar con un traje adecuado puede ser un factor que contribuya al triunfo.",
      "headline": "Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/mundo/deportes-36935058",
        "@type": "WebPage",
        "name": "Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
          "width": 1024,
        },
        "name": "BBC News Mundo",
        "publishingPrinciples": "https://www.bbc.com/mundo/institucional-51359666",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
      "url": "http://localhost:7080/mundo/deportes-36935058",
    },
  ],
}
`;

exports[`Canonical Photo Gallery Page SEO OG description 1`] = `"La estética de la ropa deportiva ha ido evolucionando en cada edición olímpica, pero no solo se trata de lucir bien, pues en varias competencias contar con un traje adecuado puede ser un factor que contribuya al triunfo."`;

exports[`Canonical Photo Gallery Page SEO OG image 1`] = `"http://ichef.test.bbci.co.uk/news/1024/branded_mundo/16506/production/_90689319_gettyimages-2642105-1.jpg"`;

exports[`Canonical Photo Gallery Page SEO OG image alt 1`] = `"Gimnastas en los primeros juegos"`;

exports[`Canonical Photo Gallery Page SEO OG locale 1`] = `"es-005"`;

exports[`Canonical Photo Gallery Page SEO OG site name 1`] = `"BBC News Mundo"`;

exports[`Canonical Photo Gallery Page SEO OG title 1`] = `"Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos - BBC News Mundo"`;

exports[`Canonical Photo Gallery Page SEO OG type 1`] = `"article"`;

exports[`Canonical Photo Gallery Page SEO OG url 1`] = `"http://localhost:7080/mundo/deportes-36935058"`;

exports[`Canonical Photo Gallery Page SEO Page title 1`] = `"Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos - BBC News Mundo"`;

exports[`Canonical Photo Gallery Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Canonical Photo Gallery Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Photo Gallery Page SEO Twitter creator 1`] = `"@bbcmundo"`;

exports[`Canonical Photo Gallery Page SEO Twitter description 1`] = `"La estética de la ropa deportiva ha ido evolucionando en cada edición olímpica, pero no solo se trata de lucir bien, pues en varias competencias contar con un traje adecuado puede ser un factor que contribuya al triunfo."`;

exports[`Canonical Photo Gallery Page SEO Twitter image alt 1`] = `"Gimnastas en los primeros juegos"`;

exports[`Canonical Photo Gallery Page SEO Twitter image src 1`] = `"http://ichef.test.bbci.co.uk/news/1024/branded_mundo/16506/production/_90689319_gettyimages-2642105-1.jpg"`;

exports[`Canonical Photo Gallery Page SEO Twitter site 1`] = `"@bbcmundo"`;

exports[`Canonical Photo Gallery Page SEO Twitter title 1`] = `"Río 2016, el antes y el ahora: cómo ha cambiado la ropa deportiva en más de un siglo de juegos olímpicos - BBC News Mundo"`;
